# AR-Reconciliation-Pipeline

./: .gitignore  Makefile  README.md  changelog.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aws/: s3_structure.txt  setup_notes.md
config/: settings.py
config/schemas/: invoices_schema.json  payments_schema.json  returns_schema.json
dags/: ar_reconciliation_dag.py
data/processed/: reconciliation.db
data/raw/: credits.csv  customers.csv  invoices.csv  payments.csv  returns.csv
data/sample/: invoices.csv  payments.csv  returns.csv
docker/: Dockerfile  docker-compose.yml
docs/: TRAINING_SOP.MD  decision_journal.md
infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
python/: generate_data.py  load_sqlite.py  run_reconciliation_local.py  validate_sql_views.py
sql/: schema_athena.sql  schema_sqlite.sql
sql/ddl/: create_invoices.sql  create_payments.sql  create_reconciliation_results.sql  create_returns.sql
sql/queries/: 02_recon_results_active_sqlite.sql  03_recon_needs_review_active_sqlite.sql  04_recon_dashboard_summary_active_sqlite.sql  ar_aging_report.sql  partial_payment_analysis.sql  reconciliation_summary.sql  sku_mismatch_detection.sql
src/ingestion/: base_loader.py  invoice_loader.py  payment_loader.py  returns_loader.py
src/models/: __init__.py  invoice.py  payment.py  return_record.py
src/pipeline/: orchestrator.py  stages.py
src/transformation/: discrepancy_detector.py  payment_matcher.py  sku_reconciler.py
src/utils/: logger.py  validators.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_discrepancy_detector.py  test_models.py  test_payment_matcher.py  test_sku_reconciler.py
